workshop03/appv1-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: appv1-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: myapp
        version: v1
    spec:
      containers:
        - name: myapp-container
          image: stackupiss/northwind-app:v1
          resources:
              requests:
                cpu: "20m"
                memory: "55M"
          ports:
            - containerPort: 3000
              name: myapp-port
          imagePullPolicy: Always
      restartPolicy: Always
